MarcoKitTests/TestData/error/array4.marco
--before
[[[[[[[[]]]]]]]

--after
0-15: Unexpected end of file
